# c-image-filters-in-parallel

./: CMakeLists.txt  README.md  aaa  bmp.h  dadd.bmpmpirun  main  main.c  mainmpi.c
benchmarking/: benchmark.c  benchmark.h
filters/: convolution.c  convolution.h  functional.c  functional.h
